feat: 마켓플레이스 조회 시 전체 검색 결과 갯수 반환
